--- a/server/package.json
+++ b/server/package.json
@@ -1,13 +1,27 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "index.ts",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.17.3",
+    "@prisma/client": "^3.12.0",
+    "apollo-server": "^3.6.7",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.0",
     "nodemon": "^2.0.15"
   },
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "nodemon index.ts" 
+  },
+  "prisma": {
+    "seed": "ts-node ./prisma/seed.ts"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.12",
+    "@types/node": "^17.0.24",
+    "graphql": "^16.3.0",
+    "prisma": "^3.12.0",
+    "ts-node-dev": "^1.1.8",
+    "typescript": "^4.6.3"
   }
 }
