--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,4 @@
 CORS_ALLOWED_ORIGINS=http://localhost:3000,http://localhost:3001
-DATABASE_URL=mysql://root:root@localhost:3309/mont_blanc_ticket
+DATABASE_URL=mysql://root:root@localhost:3306/mont_blanc_ticket
+
+// cyrheeel:password
