--- a/server/package.json
+++ b/server/package.json
@@ -8,10 +8,11 @@
     "apollo-server": "^3.6.7",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "uuid": "^8.3.2"
   },
   "scripts": {
-    "start": "nodemon index.ts" 
+    "start": "nodemon index.ts"
   },
   "prisma": {
     "seed": "ts-node ./prisma/seed.ts"
