--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@prisma/client": "^3.12.0",
     "apollo-server": "^3.6.7",
+    "argon2": "^0.28.5",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "nodemon": "^2.0.15",
