--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,33 +1,32 @@
 FROM node:lts-alpine
 
-RUN mkdir app
-
-WORKDIR /app
-
-COPY tsconfig.json ./
-COPY package*.json ./
-
-RUN npm i
-RUN npm i -g typescript
-
-COPY src ./
-
-RUN tsc
-
-FROM node:lts-alpine
-
-RUN mkdir app
-
-WORKDIR /app
-
-COPY --from=builder /app/build /app/build
-
-RUN apk --no-cache add curl
-
 ENV REQUEST_ORIGIN=http://localhost:5000/
-
+RUN mkdir app
+WORKDIR /app
 COPY package*.json ./
+RUN yarn
+RUN yarn global add typescript
+COPY tsconfig.json ./
+COPY gql ./
+COPY prisma ./
+COPY index.ts ./
+COPY db.ts ./
 
-RUN npm i --production
 
-CMD npm start
+# RUN tsc
+
+# FROM node:lts-alpine
+
+# RUN mkdir app
+
+# WORKDIR /app
+
+# COPY --from=builder /app/build /app/build
+
+# RUN apk --no-cache add curl
+
+# COPY package*.json ./
+
+# RUN npm i --production
+
+CMD yarn start
