--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "nodemon": "^2.0.15",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "graphql": "^16.3.0"
   },
   "scripts": {
     "start": "nodemon index.ts"
@@ -21,7 +22,6 @@
   "devDependencies": {
     "@types/cors": "^2.8.12",
     "@types/node": "^17.0.24",
-    "graphql": "^16.3.0",
     "prisma": "^3.12.0",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.6.3"
