dockerfile server almost ok

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,16 +1,18 @@
 FROM node:lts-alpine
 
 ENV REQUEST_ORIGIN=http://localhost:5000/
+ENV DATABASE_URL=mysql://root:root@localhost:3309/mont_blanc_ticket
 RUN mkdir app
 WORKDIR /app
 COPY package*.json ./
 RUN yarn
 RUN yarn global add typescript
 COPY tsconfig.json ./
-COPY gql ./
-COPY prisma ./
+COPY gql gql
+COPY prisma prisma
 COPY index.ts ./
 COPY db.ts ./
+RUN npx prisma migrate dev
 
 
 # RUN tsc
