--- a/client/package.json
+++ b/client/package.json
@@ -45,6 +45,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.7",
+    "eslint-import-resolver-typescript": "^2.7.1",
     "postcss": "^8.4.13",
     "tailwindcss": "^3.0.24"
   }
