--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,13 +1,15 @@
 services:
   mysql:
-    container_name: mysql
+    container_name: mysql-docker
+    restart: always
     image: 'mysql:latest'
     ports:
       - '3309:3306'
     environment:
       - MYSQL_ROOT_PASSWORD=root
-      - MYSQL_DATABASE=gamelle_api_database
-    command: --default-authentication-plugin=mysql_native_password + 'bash -c "npx prisma migrate dev"'
+    # volumes:
+      # - db-volume:/var/lib/mysql
+    command: --default-authentication-plugin=mysql_native_password
   server:
     build: ./server
     ports:
@@ -15,13 +17,16 @@ services:
     depends_on:
       - mysql
     environment:
-      - DATABASE_URL=mysql://root:root@db:3306/gamelle_api_database
+      - REQUEST_ORIGIN=http://localhost:5000/
+      - DATABASE_URL=mysql://root:root@host.docker.internal:3309/mont_blanc_ticket
     command: 'bash -c "yarn && yarn global add typescript && yarn start && npx prisma migrate dev"'
     volumes: 
       - ./server/src/:/server/src/
-  # client:
-  #   build: ./client
-  #   ports:
-  #     - 3000:3000
-  #   volumes:
-  #     - ./client/src/:/client/src/
+  client:
+    build: ./client
+    ports:
+      - 3000:3000
+    depends_on:
+      - server
+    volumes:
+      - ./client/src/:/client/src/
