--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -2,31 +2,43 @@ services:
   mysql:
     container_name: mysql-docker
     restart: always
-    image: 'mysql:latest'
+    image: 'mysql:8.0.22'
     ports:
       - '3309:3306'
     environment:
+      - MYSQL_USER=root
       - MYSQL_ROOT_PASSWORD=root
-    # volumes:
-      # - db-volume:/var/lib/mysql
+      - MYSQL_DATABASE=mont_blanc_ticket
+    volumes:
+      - ./db-volume:/var/lib/mysql
     command: --default-authentication-plugin=mysql_native_password
+    healthcheck:
+        test: "mysql -u root -proot --execute 'SHOW DATABASES;'"
+        interval: 5s
+        retries: 20
   server:
     build: ./server
     ports:
       - 4000:4000
     depends_on:
-      - mysql
+      mysql:
+        condition: service_healthy
     environment:
       - REQUEST_ORIGIN=http://localhost:5000/
       - DATABASE_URL=mysql://root:root@host.docker.internal:3309/mont_blanc_ticket
-    command: 'bash -c "yarn && yarn global add typescript && yarn start && npx prisma migrate dev"'
+    command: 'bash -c "yarn && yarn global add typescript && yarn start && npx prisma generate && npx prisma migrate dev"'
     volumes: 
       - ./server/src/:/server/src/
+    healthcheck:
+        test: ["CMD", "curl", "localhost:4000"]
+        interval: 5s
+        retries: 20
   client:
     build: ./client
     ports:
       - 3000:3000
     depends_on:
-      - server
+      server:
+        condition: service_healthy
     volumes:
       - ./client/src/:/client/src/
