--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,14 +1,18 @@
+version: '3'
+
 services:
   mysql:
     container_name: mysql-docker
     restart: always
     image: 'mysql:8.0.22'
+    ports:
+      - '3309:3306'
     environment:
       - MYSQL_USER=root
       - MYSQL_ROOT_PASSWORD=root
       - MYSQL_DATABASE=mont_blanc_ticket
     volumes:
-      - ./db-volume:/var/lib/mysql
+      - db-volume:/var/lib/mysql
     command: '--default-authentication-plugin=mysql_native_password'
     healthcheck:
         test: "mysql -u root -proot --execute 'SHOW DATABASES;'"
@@ -22,6 +26,8 @@ services:
     container_name: server-docker
     build: ./server
     restart: always
+    ports:
+      - 4000:4000
     depends_on:
       mysql:
         condition: service_healthy
@@ -46,6 +52,8 @@ services:
     container_name: client-docker
     build: ./client
     restart: always
+    ports:
+      - 3000:3000
     depends_on:
       server:
         condition: service_healthy
@@ -60,5 +68,10 @@ services:
 networks:
   data:
     driver: bridge
+    external: false
   web:
     driver: bridge
+    external: false #TODO: <- Have to change this 
+
+volumes:
+  db-volume:
