--- a/server/package.json
+++ b/server/package.json
@@ -9,9 +9,10 @@
     "argon2": "^0.28.5",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
+    "graphql": "^16.3.0",
+    "jsonwebtoken": "^8.5.1",
     "nodemon": "^2.0.15",
-    "uuid": "^8.3.2",
-    "graphql": "^16.3.0"
+    "uuid": "^8.3.2"
   },
   "scripts": {
     "start": "nodemon index.ts"
