--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -18,10 +18,6 @@ services:
         test: "mysql -u root -proot --execute 'SHOW DATABASES;'"
         interval: 1s
         retries: 120
-    networks:
-      data:
-        aliases:
-          - mysql
   server:
     container_name: server-docker
     build: ./server
@@ -32,22 +28,15 @@ services:
       mysql:
         condition: service_healthy
     environment:
-      - REQUEST_ORIGIN=client:5000/
-      - DATABASE_URL=mysql://root:root@mysql:3306/mont_blanc_ticket
+      - REQUEST_ORIGIN=http://localhost:5000/
+      - DATABASE_URL=mysql://root:root@host.docker.internal:3309/mont_blanc_ticket
+      - CHOKIDAR_USEPOLLING="true"
     volumes:
-      - ./server/src/:/server/src/
+      - server:/server/
     healthcheck:
-        test: ["CMD", "curl", "server:4000/graphql"]
-        interval: 1.5s
+        test: "curl http://localhost:4000/graphql"
+        interval: 1s
         retries: 120
-    networks:
-      data:
-        priority: 1000
-        aliases:
-          - server
-      web:
-        aliases:
-          - server
   client:
     container_name: client-docker
     build: ./client
@@ -57,21 +46,13 @@ services:
     depends_on:
       server:
         condition: service_healthy
+    environment:
+      - CHOKIDAR_USEPOLLING="true"
     volumes:
-      - ./client/src/:/client/src/
+      - app:/client/src/
     command: 'yarn start'
-    networks:
-      web :
-        aliases:
-          - client
-
-networks:
-  data:
-    driver: bridge
-    external: false
-  web:
-    driver: bridge
-    external: false #TODO: <- Have to change this 
 
 volumes:
   db-volume:
+  server:
+  app: 
