--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,7 @@
     "@prisma/client": "^3.12.0",
     "apollo-server": "^3.6.7",
     "argon2": "^0.28.5",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "graphql": "^16.3.0",
