--- a/server/package.json
+++ b/server/package.json
@@ -7,11 +7,11 @@
     "@prisma/client": "^3.12.0",
     "apollo-server": "^3.6.7",
     "argon2": "^0.28.5",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "graphql": "^16.3.0",
     "jsonwebtoken": "^8.5.1",
-    "nodemon": "^2.0.15",
     "uuid": "^8.3.2"
   },
   "scripts": {
@@ -20,7 +20,8 @@
   "prisma": {
     "seed": "ts-node ./prisma/seed.ts"
   },
-  "devDependencies": {
+  "devDependencies": {    
+    "nodemon": "^2.0.15",
     "@types/cors": "^2.8.12",
     "@types/node": "^17.0.24",
     "prisma": "^3.12.0",
