--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "@types/node": "^16.11.27",
     "@types/react": "^18.0.5",
     "@types/react-dom": "^18.0.0",
+    "apollo-link-context": "^1.0.20",
     "cypress": "^10.3.1",
     "graphql": "^16.5.0",
     "react": "^18.0.0",
